secondfile/objects/DHStatus_Discount_Plans__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-DHStatus-Discount Plans</description>
    <fields>
        <fullName>DHStatus_Contract_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-DHStatus-Discount Plans-DHStatus-Contract Details</description>
        <label>DHStatus-Contract Details</label>
        <referenceTo>DHStatus_Contract_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Discount Plans</relationshipLabel>
        <relationshipName>DHStatus_Discount_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-DHStatus-Discount Plans-Discount Amount</description>
        <label>Discount Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Plan_ID__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-DHStatus-Discount Plans-Discount Plan ID</description>
        <label>Discount Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Discount Plans</label>
    <nameField>
        <displayFormat>DDP{0000}</displayFormat>
        <label>DHStatus-Discount Plans Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Discount Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>